# Rest

./: Cargo.toml  README.md
Source/Fn/: Build.rs  SWC.rs
Source/Fn/Binary/: Command.rs
Source/Fn/Binary/Command/: Entry.rs  Parallel.rs  Sequential.rs
Source/Fn/SWC/: Watch.rs
Source/Fn/SWC/Watch/: Compile.rs
Source/Struct/: SWC.rs  mod.rs
Source/Struct/Binary/: Command.rs
Source/Struct/Binary/Command/: Entry.rs  Option.rs
